# The-Cooperation-Ceiling

./: .dvcignore  .gitattributes  .gitignore  README.md  data.sha256  dvc.yaml  pyproject.toml
.github/workflows/: build.yml  ci.yml
analysis/ceiling_conclusion/: main.py
analysis/ceiling_extrinsic/: main.py
analysis/ceiling_intrinsic/: main.py
analysis/ceiling_large_n/: main.py
analysis/ceiling_overview/: main.py
assets/data/large_n/: main.py
assets/data/raw/: jobs.txt  main.py
assets/img/M_violinplot/: main.py
assets/img/alpha_for_different_r/: main.py
assets/img/alpha_range_violinplots/: main.py
assets/img/beta_r_graph/: main.py
assets/img/beta_r_heatmaps/: main.py
assets/img/ceiling_conclusion/: main.py
assets/img/ceiling_extrinsic/: main.py
assets/img/ceiling_large_n/: main.py
assets/img/ceiling_overview/: main.py
cover/: main.tex
data/: jobs.txt
data/large_n/: main.py
data/sweep/: .gitignore  aspiration_mu_eq_0.001.dvc  aspiration_mu_eq_0.005.dvc  aspiration_mu_eq_0.05.dvc  aspiration_mu_eq_0.1.dvc  fermi_mu_eq_0.001.dvc  fermi_mu_eq_0.005.dvc  fermi_mu_eq_0.05.dvc  fermi_mu_eq_0.1.dvc  introspection_mu_eq_0.001.dvc  introspection_mu_eq_0.005.dvc  introspection_mu_eq_0.05.dvc  introspection_mu_eq_0.1.dvc  jobs.txt  main.py  moran_mu_eq_0.001.dvc  moran_mu_eq_0.005.dvc  moran_mu_eq_0.05.dvc  moran_mu_eq_0.1.dvc
src/: README.md  contribution_rules.py  main.py  test_contribution_rules.py  test_main.py
src/benchmarks/: test_approximate_steady_state.py
src/public_goods_games/: contribution_rules.py
tests/: test_contribution_rules.py
tex/: bibliography.bib  ceiling_crossing_table.tex  ceiling_panels.tex  dynamics_panels.tex  main.tex  state_space_panels.tex
tex/si/: main.tex
(+144 files in other folders)
