[project]
name = "exact-analysis-of-heterogeneous-moran-processes-in-climate-cooperation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black==25.9.0",
    "matplotlib>=3.10.8",
    "numpy==2.3.3",
    "pandas==3.0.0",
    "pytest==8.4.2",
    "pytest-benchmark==5.2.3",
    "pytest-cov==7.0.0",
    "scipy==1.16.3",
    "seaborn>=0.13.2",
    "sympy==1.14.0",
]
