[project]
name = "exact-analysis-of-heterogeneous-moran-processes-in-climate-cooperation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy==2.3.3",
    "pandas==3.0.0",
    "pytest==8.4.2",
    "pytest-benchmark==5.2.3",
    "pytest-cov==7.0.0",
    "ruff>=0.15.6",
    "scipy==1.16.3",
    "seaborn>=0.13.2",
    "sympy==1.14.0",
]
[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
[tool.uv.build]
packages = ["src/public_goods_games"]